# ExpressDesignerQt

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  COC_Algorithm_Comparison.md  CompararDiscretizacion.md  El Cálculo de Camino Óptico para un Óvalo Cartesiano.docx  RecalculateArchitecture.md  UndoRedoArchitecture.md  build.sh  build_log.txt  build_reliable.bat  build_script.sh  build_tests.sh  build_with_sisl.bat  deploy_app.bat  do_build.bat
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_test/: CMakeCache.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/app/: OvalDesignerApp.cpp  OvalDesignerApp.h
src/core/: ArcObject.cpp  ArcObject.h  BaseObject.cpp  BaseObject.h  CarthesianOvalOperation.cpp  CarthesianOvalOperation.h  CommandHistory.cpp  CommandHistory.h  CurveObject.cpp  CurveObject.h  CustomObject.cpp  CustomObject.h  CustomOperation.cpp  CustomOperation.h  DependencyGraph.cpp  DependencyGraph.h  LineObject.cpp  LineObject.h  ObjectFactory.cpp  ObjectFactory.h  ObjectTypes.h  PointObject.cpp  PointObject.h  Project.cpp  Project.h  PropagateWFOperation.cpp  PropagateWFOperation.h  RefPointDescriptor.cpp  RefPointDescriptor.h
src/geometry/: PointList.cpp  SISLWrapper.cpp  SISLWrapper.h  VectorAlgebra.cpp  VectorUtils.h
src/io/: CADExporter.cpp  CADExporter.h  HistoryManager.cpp  HistoryManager.h  ProjectSerializer.cpp  ProjectSerializer.h  RhinoExporter.cpp  RhinoExporter.h  TXTExporter.cpp  TXTExporter.h  TXTImporter.cpp  TXTImporter.h
src/optics/: CartesianOval.cpp  CartesianOval.h  FresnelLensCalculator.cpp  FresnelLensCalculator.h  OpticalPathLength.cpp  OpticalPathLength.h  SnellLaw.cpp  SnellLaw.h  WavefrontPropagator.cpp  WavefrontPropagator.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/delegates/: PropertyDelegate.cpp  PropertyDelegate.h
src/ui/dialogs/: AboutDialog.cpp  AboutDialog.h  CalcOvalDialog.cpp  CalcOvalDialog.h  CopyObjectDialog.cpp  CopyObjectDialog.h  CurvePointsDialog.cpp  CurvePointsDialog.h  DependencyGraphDialog.cpp  DependencyGraphDialog.h  EditPointDialog.cpp  EditPointDialog.h  ExportAllRhinoDialog.cpp  ExportAllRhinoDialog.h  ExportCADDialog.cpp  ExportCADDialog.h  ExportObjectDialog.cpp  ExportObjectDialog.h  ImportObjectDialog.cpp  ImportObjectDialog.h  InsertObjectDialog.cpp  InsertObjectDialog.h  NormalsParamsDialog.cpp  NormalsParamsDialog.h  OffsetWFDialog.cpp  OffsetWFDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  ProjectHistoryDialog.cpp  ProjectHistoryDialog.h  PropagateWFDialog.cpp  PropagateWFDialog.h  RotateObjectDialog.cpp  RotateObjectDialog.h  SetScaleDialog.cpp  SetScaleDialog.h  SplashDialog.cpp  SplashDialog.h  TranslateObjectDialog.cpp  TranslateObjectDialog.h
src/ui/models/: ObjectListModel.cpp  ObjectListModel.h  ObjectTreeModel.cpp  ObjectTreeModel.h
src/ui/widgets/: ChartWidget.cpp  ChartWidget.h  ObjectTreeWidget.cpp  ObjectTreeWidget.h  PropertiesWidget.cpp  PropertiesWidget.h  ToolBarManager.cpp  ToolBarManager.h
src/utils/: Logger.cpp  Logger.h  NumericUtils.cpp  NumericUtils.h  StringUtils.cpp  StringUtils.h
tests/: CMakeLists.txt
tests/test_core/: test_ArcObject.cpp  test_BaseObject.cpp  test_CurveObject.cpp  test_CustomObject.cpp  test_LineObject.cpp  test_ObjectFactory.cpp  test_ObjectTypes.cpp  test_PointObject.cpp  test_Project.cpp
tests/test_geometry/: test_SISLWrapper.cpp
tests/test_io/: test_ProjectSerializer.cpp
tests/test_optics/: test_CartesianOval.cpp  test_OpticalPathLength.cpp  test_OvalCoupling.cpp  test_SnellLaw.cpp
tools/: resolve_deps.ps1
